--- a/style/game.css
+++ b/style/game.css
@@ -1,3 +1,13 @@
 .comments-container {
     margin-top: 70px;
 }
+
+.comment-delete {
+    border: 0 !important;
+    background-color: white !important;
+}
+
+.flex {
+    display: flex;
+    justify-content: space-between;
+}
